--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,4 +3,8 @@
 
   "include": ["src/**/*"],
   "exclude": ["node_modules/*", "__sapper__/*", "public/*"],
+  "compilerOptions": {
+    "target": "es5",
+    "lib": ["esnext", "dom"]
+}
 }
