--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,12 @@
-/node_modules/
-/public/build/
+# dependencies
+/node_modules
 
+# misc
 .DS_Store
+*.pem
+
+# debug
+npm-debug.log*
+yarn-debug.log*
+lerna-debug.log*
+yarn-error.log*
