--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "eslint": "7.12.1",
     "eslint-config-prettier": "6.15.0",
     "husky": "4.3.0",
-    "lerna": "3.22.1",
+    "lerna": "^3.22.1",
     "lint-staged": "10.5.0",
     "prettier": "2.1.2",
     "typescript": "4.0.5"
