--- a/packages/intertext-web/package.json
+++ b/packages/intertext-web/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@intertext/web",
   "version": "1.0.0",
+  "private": true,
   "scripts": {
     "test": "echo 'Tests coming soon...'",
     "build": "rollup -c",
@@ -24,6 +25,11 @@
     "typescript": "4.0.5"
   },
   "dependencies": {
+    "@intertext/engine-ts": "^1.0.0",
+    "@typescript-eslint/eslint-plugin": "4.8.1",
+    "@typescript-eslint/parser": "4.8.1",
+    "eslint": "7.13.0",
+    "lint-staged": "10.5.1",
     "sirv-cli": "^1.0.0"
   }
 }
