--- a/packages/intertext-engine-ts/package.json
+++ b/packages/intertext-engine-ts/package.json
@@ -11,6 +11,7 @@
     "typescript": "4.0.5"
   },
   "dependencies": {
+    "@intertext/engine": "^1.0.1",
     "@typescript-eslint/eslint-plugin": "4.8.1",
     "@typescript-eslint/parser": "4.8.1",
     "eslint": "7.13.0",
