--- a/packages/intertext-web/package.json
+++ b/packages/intertext-web/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "echo 'Tests coming soon...'",
     "build": "rollup -c",
-    "dev": "rollup -c -w",
+    "dev": "./load_engine.sh && rollup -c -w",
     "start": "sirv public",
     "validate": "svelte-check"
   },
@@ -13,6 +13,7 @@
     "@rollup/plugin-commonjs": "^14.0.0",
     "@rollup/plugin-node-resolve": "^8.0.0",
     "@rollup/plugin-typescript": "^6.0.0",
+    "@rollup/plugin-wasm": "^5.1.1",
     "@tsconfig/svelte": "^1.0.10",
     "rollup": "^2.3.4",
     "rollup-plugin-livereload": "^2.0.0",
@@ -25,6 +26,7 @@
     "typescript": "4.0.5"
   },
   "dependencies": {
+    "@intertext/engine": "^1.0.1",
     "@intertext/engine-ts": "^1.0.0",
     "@typescript-eslint/eslint-plugin": "4.8.1",
     "@typescript-eslint/parser": "4.8.1",
