--- a/packages/intertext-cli/tsconfig.json
+++ b/packages/intertext-cli/tsconfig.json
@@ -1,9 +1,26 @@
 {
-	"extends": "@sindresorhus/tsconfig",
 	"compilerOptions": {
-		"jsx": "react",
+    "outDir": "dist",
 		"esModuleInterop": true,
-		"outDir": "dist"
+    "target": "es2018", // Node.js 10
+		"module": "commonjs",
+		"moduleResolution": "node",
+		"resolveJsonModule": true,
+		"jsx": "react",
+		"declaration": true,
+		"pretty": true,
+		"newLine": "lf",
+		"stripInternal": true,
+		"strict": true,
+		"noImplicitReturns": true,
+		"noUnusedLocals": true,
+		"noUnusedParameters": true,
+		"noFallthroughCasesInSwitch": true,
+		"noUncheckedIndexedAccess": true,
+		"noEmitOnError": true,
+		"useDefineForClassFields": true,
+		"forceConsistentCasingInFileNames": true,
+		"skipLibCheck": true
 	},
-	"include": ["source"]
+	"include": ["src"]
 }
