--- a/packages/intertext-cli/package.json
+++ b/packages/intertext-cli/package.json
@@ -16,9 +16,11 @@
 		"dist/cli.js"
 	],
 	"dependencies": {
+		"@intertext/utils": "^0.0.0",
 		"ink": "^3.0.8",
 		"meow": "^8.0.0",
-		"react": "^17.0.1"
+		"react": "^17.0.1",
+		"typescript": "^4.1.2"
 	},
 	"devDependencies": {
 		"@ava/typescript": "^1.1.1",
