--- a/packages/intertext-engine/package.json
+++ b/packages/intertext-engine/package.json
@@ -1,20 +1,21 @@
 {
   "name": "@intertext/engine",
   "version": "0.0.0",
-  "private": true,
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "rm -rf dist && tsc"
   },
   "devDependencies": {
-    "typescript": "4.0.5"
+    "typescript": "^4.1.2"
   },
   "dependencies": {
     "@intertext/engine": "^0.0.0",
+    "@intertext/utils": "^0.0.0",
     "@typescript-eslint/eslint-plugin": "4.8.1",
     "@typescript-eslint/parser": "4.8.1",
     "eslint": "7.13.0",
-    "lint-staged": "10.5.1"
+    "lint-staged": "10.5.1",
+    "typescript": "^4.1.2"
   }
 }
