--- a/packages/intertext-native/package.json
+++ b/packages/intertext-native/package.json
@@ -11,19 +11,20 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@intertext/utils": "^0.0.0",
     "expo": "~39.0.2",
     "expo-status-bar": "~1.0.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.4.tar.gz",
-    "react-native-web": "~0.13.12"
+    "react-native-web": "~0.13.12",
+    "typescript": "^4.1.2"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
     "@types/react": "~16.9.35",
     "@types/react-dom": "~16.9.8",
     "@types/react-native": "~0.63.2",
-    "typescript": "~3.9.5"
-  },
-  "private": true
+    "typescript": "^4.1.2"
+  }
 }
