--- a/packages/intertext-svelte/package.json
+++ b/packages/intertext-svelte/package.json
@@ -1,7 +1,6 @@
 {
   "name": "@intertext/svelte",
   "version": "0.0.0",
-  "private": true,
   "scripts": {
     "test": "echo 'Tests coming soon...'",
     "build": "rollup -c",
@@ -23,14 +22,16 @@
     "svelte-check": "^1.0.0",
     "svelte-preprocess": "^4.0.0",
     "tslib": "^2.0.0",
-    "typescript": "4.0.5"
+    "typescript": "^4.1.2"
   },
   "dependencies": {
     "@intertext/engine": "^0.0.0",
+    "@intertext/utils": "^0.0.0",
     "@typescript-eslint/eslint-plugin": "4.8.1",
     "@typescript-eslint/parser": "4.8.1",
     "eslint": "7.13.0",
     "lint-staged": "10.5.1",
-    "sirv-cli": "^1.0.0"
+    "sirv-cli": "^1.0.0",
+    "typescript": "^4.1.2"
   }
 }
