--- a/packages/intertext-utils/package.json
+++ b/packages/intertext-utils/package.json
@@ -1,6 +1,16 @@
 {
   "name": "@intertext/utils",
   "version": "0.0.0",
-  "main": "index.js",
-  "license": "MIT"
+  "main": "dist/index.js",
+  "license": "MIT",
+  "scripts": {
+    "build": "rm -rf dist && tsc"
+  },
+  "dependencies": {
+    "simple-markdown": "^0.7.2",
+    "typescript": "^4.1.2"
+  },
+  "devDependencies": {
+    "typescript": "^4.1.2"
+  }
 }
