--- a/packages/intertext-utils/tsconfig.json
+++ b/packages/intertext-utils/tsconfig.json
@@ -18,10 +18,8 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "noEmit": true,
-    "jsx": "react-jsx"
+    "outDir": "dist"
   },
-  "include": [
-    "src"
-  ]
+  "include": ["**/*.ts"],
+  "exclude": ["dist", "node_modules"]
 }
