--- a/packages/intertext-web/package.json
+++ b/packages/intertext-web/package.json
@@ -1,8 +1,10 @@
 {
   "name": "@intertext/web",
   "version": "0.0.0",
-  "private": true,
   "dependencies": {
+    "@emotion/react": "^11.1.2",
+    "@emotion/styled": "^11.0.0",
+    "@intertext/utils": "^0.0.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -14,8 +16,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
-    "styled-components": "^5.2.1",
-    "typescript": "^4.0.3",
+    "typescript": "^4.1.2",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
