--- a/packages/intertext-engine/package.json
+++ b/packages/intertext-engine/package.json
@@ -4,9 +4,16 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "build": "rm -rf dist && tsc"
+    "build": "rm -rf dist && tsc",
+    "test": "jest"
   },
   "devDependencies": {
+    "@babel/core": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
+    "@babel/preset-typescript": "^7.12.7",
+    "@types/jest": "^26.0.19",
+    "babel-jest": "^26.6.3",
+    "jest": "^26.6.3",
     "typescript": "^4.1.2"
   },
   "dependencies": {
@@ -16,6 +23,7 @@
     "@typescript-eslint/parser": "4.8.1",
     "eslint": "7.13.0",
     "lint-staged": "10.5.1",
-    "typescript": "^4.1.2"
+    "typescript": "^4.1.2",
+    "uuid": "^8.3.2"
   }
 }
