--- a/packages/intertext-web/package.json
+++ b/packages/intertext-web/package.json
@@ -2,6 +2,7 @@
   "name": "@intertext/web",
   "version": "0.0.0",
   "dependencies": {
+    "@emotion/css": "^11.1.3",
     "@emotion/react": "^11.1.2",
     "@emotion/styled": "^11.0.0",
     "@intertext/utils": "^0.0.0",
