--- a/packages/intertext-native/package.json
+++ b/packages/intertext-native/package.json
@@ -11,6 +11,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@intertext/engine2": "^0.0.0",
     "@intertext/utils": "^0.0.0",
     "expo": "~39.0.2",
     "expo-status-bar": "~1.0.2",
