--- a/packages/intertext-svelte/package.json
+++ b/packages/intertext-svelte/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "@intertext/engine": "^0.0.0",
+    "@intertext/engine2": "^0.0.0",
     "@intertext/utils": "^0.0.0",
     "@typescript-eslint/eslint-plugin": "4.8.1",
     "@typescript-eslint/parser": "4.8.1",
