--- a/packages/intertext-utils/package.json
+++ b/packages/intertext-utils/package.json
@@ -7,6 +7,7 @@
     "build": "rm -rf dist && tsc"
   },
   "dependencies": {
+    "@intertext/engine2": "^0.0.0",
     "simple-markdown": "^0.7.2",
     "typescript": "^4.1.2"
   },
