--- a/packages/intertext-web/package.json
+++ b/packages/intertext-web/package.json
@@ -16,13 +16,17 @@
     "@types/react-dom": "^16.9.8",
     "@types/styled-components": "^5.1.4",
     "classnames": "^2.2.6",
+    "fast-xml-parser": "^3.17.6",
+    "he": "^1.2.0",
+    "install": "^0.13.0",
     "polished": "^4.0.5",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-scripts": "4.0.1",
     "typescript": "^4.1.2",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "^0.2.4",
+    "xml2js": "^0.4.23"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -50,6 +54,7 @@
   },
   "devDependencies": {
     "@types/classnames": "^2.2.11",
-    "@types/react-helmet": "^6.1.0"
+    "@types/react-helmet": "^6.1.0",
+    "@types/xml2js": "^0.4.8"
   }
 }
