--- a/packages/intertext-cli/package.json
+++ b/packages/intertext-cli/package.json
@@ -1,55 +1,30 @@
 {
-	"name": "@intertext/cli",
-	"version": "0.0.0",
-	"license": "MIT",
-	"bin": "dist/cli.js",
-	"engines": {
-		"node": ">=10"
-	},
-	"scripts": {
-		"build": "tsc",
-		"start": "npm run build && dist/cli.js",
-		"pretest": "npm run build",
-		"test": "xo && ava"
-	},
-	"files": [
-		"dist/cli.js"
-	],
-	"dependencies": {
-		"@intertext/engine2": "^0.0.0",
-		"@intertext/utils": "^0.0.0",
-		"ink": "^3.0.8",
-		"meow": "^8.0.0",
-		"react": "^17.0.1",
-		"typescript": "^4.1.2"
-	},
-	"devDependencies": {
-		"@ava/typescript": "^1.1.1",
-		"@sindresorhus/tsconfig": "^0.8.0",
-		"@types/react": "^17.0.0",
-		"ava": "^3.13.0",
-		"chalk": "^4.1.0",
-		"eslint-config-xo-react": "^0.23.0",
-		"eslint-plugin-react": "^7.21.5",
-		"eslint-plugin-react-hooks": "^4.2.0",
-		"ink-testing-library": "^2.1.0",
-		"typescript": "^4.1.2",
-		"xo": "^0.35.0"
-	},
-	"ava": {
-		"typescript": {
-			"extensions": [
-				"tsx"
-			],
-			"rewritePaths": {
-				"src/": "dist/"
-			}
-		}
-	},
-	"xo": {
-		"extends": "xo-react",
-		"rules": {
-			"react/prop-types": "off"
-		}
-	}
+  "name": "@intertext/cli",
+  "version": "1.0.0",
+  "license": "MIT",
+  "bin": "dist/index.js",
+  "engines": {
+    "node": ">=10"
+  },
+  "scripts": {
+    "start": "tsc --watch --project tsconfig.json",
+    "build": "tsc --build tsconfig.json",
+    "fix": "eslint --fix && prettier --write ."
+  },
+  "files": [
+    "dist/index.js"
+  ],
+  "dependencies": {},
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.14.1",
+    "@typescript-eslint/parser": "^4.14.1",
+    "eslint": "^7.18.0",
+    "eslint-config-prettier": "^7.2.0",
+    "eslint-plugin-eslint-comments": "^3.2.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jest": "^24.1.3",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "prettier": "^2.2.1"
+  }
 }
