intertext engine remove submodule

--- a/lerna.json
+++ b/lerna.json
@@ -6,7 +6,5 @@
     "*react-native*",
     "*react-native*/**"
   ],
-  "version": "independent",
-  "npmClient": "yarn",
-  "useWorkspaces": true
+  "version": "independent"
 }
