--- a/packages/intertext-cli/package.json
+++ b/packages/intertext-cli/package.json
@@ -14,7 +14,9 @@
   "files": [
     "dist/index.js"
   ],
-  "dependencies": {},
+  "dependencies": {
+    "@intertext/engine2": "^0.0.0"
+  },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.14.1",
     "@typescript-eslint/parser": "^4.14.1",
