--- a/packages/intertext-engine/package.json
+++ b/packages/intertext-engine/package.json
@@ -1,29 +1,32 @@
 {
   "name": "@intertext/engine",
   "version": "0.0.0",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "bin": "dist/index.js",
+  "engines": {
+    "node": ">=10"
+  },
   "scripts": {
-    "build": "rm -rf dist && tsc",
-    "test": "jest"
+    "start": "tsc --watch --project tsconfig.json",
+    "build": "tsc --build tsconfig.json",
+    "fix": "eslint --fix && prettier --write ."
+  },
+  "files": [
+    "dist/index.js"
+  ],
+  "dependencies": {
+    "xml2js": "^0.4.23"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.10",
-    "@babel/preset-env": "^7.12.11",
-    "@babel/preset-typescript": "^7.12.7",
-    "@types/jest": "^26.0.19",
-    "babel-jest": "^26.6.3",
-    "jest": "^26.6.3",
-    "typescript": "^4.1.2"
-  },
-  "dependencies": {
-    "@intertext/engine2": "^0.0.0",
-    "@intertext/utils": "^0.0.0",
-    "@typescript-eslint/eslint-plugin": "4.8.1",
-    "@typescript-eslint/parser": "4.8.1",
-    "eslint": "7.13.0",
-    "lint-staged": "10.5.1",
-    "typescript": "^4.1.2",
-    "uuid": "^8.3.2"
+    "@types/xml2js": "^0.4.8",
+    "@typescript-eslint/eslint-plugin": "^4.14.1",
+    "@typescript-eslint/parser": "^4.14.1",
+    "eslint": "^7.18.0",
+    "eslint-config-prettier": "^7.2.0",
+    "eslint-plugin-eslint-comments": "^3.2.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jest": "^24.1.3",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "prettier": "^2.2.1"
   }
 }
