--- a/packages/intertext-engine/package.json
+++ b/packages/intertext-engine/package.json
@@ -1,7 +1,8 @@
 {
   "name": "@intertext/engine",
   "version": "0.0.0",
-  "bin": "dist/index.js",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "engines": {
     "node": ">=10"
   },
