--- a/packages/intertext-cli/package.json
+++ b/packages/intertext-cli/package.json
@@ -15,7 +15,7 @@
     "dist/index.js"
   ],
   "dependencies": {
-    "@intertext/engine2": "^0.0.0"
+    "@intertext/engine": "^0.0.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.14.1",
