--- a/packages/intertext-engine-old/package.json
+++ b/packages/intertext-engine-old/package.json
@@ -17,6 +17,7 @@
     "typescript": "^4.1.2"
   },
   "dependencies": {
+    "@intertext/engine": "^0.0.0",
     "@intertext/utils": "^0.0.0",
     "@typescript-eslint/eslint-plugin": "4.8.1",
     "@typescript-eslint/parser": "4.8.1",
