--- a/packages/intertext-cli/package.json
+++ b/packages/intertext-cli/package.json
@@ -15,9 +15,20 @@
     "dist/index.js"
   ],
   "dependencies": {
-    "@intertext/engine": "^0.0.0"
+    "@intertext/engine": "^0.0.0",
+    "blessed": "^0.1.81",
+    "react": "^17.0.1",
+    "react-blessed": "^0.6.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
+    "@babel/preset-react": "^7.12.10",
+    "@babel/register": "^7.12.10",
+    "@types/blessed": "^0.1.17",
+    "@types/node": "^14.14.22",
+    "@types/react": "^17.0.0",
+    "@types/react-blessed": "^0.3.2",
     "@typescript-eslint/eslint-plugin": "^4.14.1",
     "@typescript-eslint/parser": "^4.14.1",
     "eslint": "^7.18.0",
@@ -27,6 +38,8 @@
     "eslint-plugin-jest": "^24.1.3",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "prettier": "^2.2.1"
   }
 }
