--- a/packages/intertext-cli/tsconfig.json
+++ b/packages/intertext-cli/tsconfig.json
@@ -4,6 +4,7 @@
     "module": "CommonJS",
     "outDir": "dist",
     "lib": ["es2015", "dom"],
+    "jsx": "react",
     "sourceMap": true,
     "resolveJsonModule": true,
     "strict": true,
@@ -17,6 +18,6 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true
   },
-  "include": ["./**/*.ts"],
+  "include": ["./**/*"],
   "exclude": ["node_modules", "dist"]
 }
