--- a/packages/intertext-cli/package.json
+++ b/packages/intertext-cli/package.json
@@ -1,45 +1,54 @@
 {
-  "name": "@intertext/cli",
-  "version": "1.0.0",
-  "license": "MIT",
-  "bin": "dist/index.js",
-  "engines": {
-    "node": ">=10"
-  },
-  "scripts": {
-    "start": "tsc --watch --project tsconfig.json",
-    "build": "tsc --build tsconfig.json",
-    "fix": "eslint --fix && prettier --write ."
-  },
-  "files": [
-    "dist/index.js"
-  ],
-  "dependencies": {
-    "@intertext/engine": "^0.0.0",
-    "blessed": "^0.1.81",
-    "react": "^17.0.1",
-    "react-blessed": "^0.6.2"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.12.10",
-    "@babel/preset-env": "^7.12.11",
-    "@babel/preset-react": "^7.12.10",
-    "@babel/register": "^7.12.10",
-    "@types/blessed": "^0.1.17",
-    "@types/node": "^14.14.22",
-    "@types/react": "^17.0.0",
-    "@types/react-blessed": "^0.3.2",
-    "@typescript-eslint/eslint-plugin": "^4.14.1",
-    "@typescript-eslint/parser": "^4.14.1",
-    "eslint": "^7.18.0",
-    "eslint-config-prettier": "^7.2.0",
-    "eslint-plugin-eslint-comments": "^3.2.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jest": "^24.1.3",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-react": "^7.22.0",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "prettier": "^2.2.1"
-  }
+	"name": "@intertext/cli",
+	"version": "1.0.0",
+	"license": "MIT",
+	"bin": "dist/cli.js",
+	"engines": {
+		"node": ">=10"
+	},
+	"scripts": {
+		"build": "tsc",
+		"start": "npm run build && dist/cli.js",
+		"pretest": "npm run build",
+		"test": "xo && ava"
+	},
+	"files": [
+		"dist/cli.js"
+	],
+	"dependencies": {
+		"@intertext/engine": "^0.0.0",
+		"@intertext/utils": "^0.0.0",
+		"ink": "^3.0.8",
+		"meow": "^9.0.0",
+		"react": "^17.0.1"
+	},
+	"devDependencies": {
+		"@ava/typescript": "^1.1.1",
+		"@sindresorhus/tsconfig": "^0.8.0",
+		"@types/react": "^17.0.0",
+		"ava": "^3.15.0",
+		"chalk": "^4.1.0",
+		"eslint-config-xo-react": "^0.23.0",
+		"eslint-plugin-react": "^7.22.0",
+		"eslint-plugin-react-hooks": "^4.2.0",
+		"ink-testing-library": "^2.1.0",
+		"typescript": "^4.1.3",
+		"xo": "^0.37.1"
+	},
+	"ava": {
+		"typescript": {
+			"extensions": [
+				"tsx"
+			],
+			"rewritePaths": {
+				"source/": "dist/"
+			}
+		}
+	},
+	"xo": {
+		"extends": "xo-react",
+		"rules": {
+			"react/prop-types": "off"
+		}
+	}
 }
