--- a/packages/intertext-engine/package.json
+++ b/packages/intertext-engine/package.json
@@ -15,6 +15,7 @@
     "dist/index.js"
   ],
   "dependencies": {
+    "@intertext/utils": "^0.0.0",
     "xml2js": "^0.4.23"
   },
   "devDependencies": {
