--- a/packages/intertext-editor/package.json
+++ b/packages/intertext-editor/package.json
@@ -14,6 +14,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "classnames": "^2.2.6",
     "framer-motion": ">=3.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -42,5 +43,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/classnames": "^2.2.11"
   }
 }
