--- a/packages/intertext-engine/package.json
+++ b/packages/intertext-engine/package.json
@@ -16,6 +16,7 @@
   ],
   "dependencies": {
     "@intertext/utils": "^0.0.0",
+    "revitail": "^0.0.0",
     "xml2js": "^0.4.23"
   },
   "devDependencies": {
