--- a/packages/intertext-svelte/package.json
+++ b/packages/intertext-svelte/package.json
@@ -31,6 +31,7 @@
     "@typescript-eslint/parser": "4.8.1",
     "eslint": "7.13.0",
     "lint-staged": "10.5.1",
+    "revitail": "^0.0.0",
     "sirv-cli": "^1.0.0",
     "typescript": "^4.1.2"
   }
