--- a/packages/intertext-utils/package.json
+++ b/packages/intertext-utils/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@intertext/engine": "^0.0.0",
+    "revitail": "^0.0.0",
     "simple-markdown": "^0.7.2",
     "typescript": "^4.1.2"
   },
