--- a/lerna.json
+++ b/lerna.json
@@ -4,7 +4,8 @@
     "*react*",
     "*react*/**",
     "*react-native*",
-    "*react-native*/**"
+    "*react-native*/**",
+    "tailwindcss"
   ],
   "version": "independent"
 }
