--- a/packages/intertext-cli-old/package.json
+++ b/packages/intertext-cli-old/package.json
@@ -22,8 +22,7 @@
     "neo-blessed": "^0.2.0",
     "node-fetch": "^2.6.1",
     "react": "^17.0.1",
-    "react-blessed": "^0.6.2",
-    "revitail": "^0.0.0"
+    "react-blessed": "^0.6.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
