--- a/packages/intertext-ui/package.json
+++ b/packages/intertext-ui/package.json
@@ -16,8 +16,7 @@
     "focus-visible": "^5.2.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
-    "react-feather": "^2.0.9",
-    "revitail": "^0.0.0"
+    "react-feather": "^2.0.9"
   },
   "devDependencies": {
     "@babel/core": "^7.13.10",
@@ -49,7 +48,7 @@
     "prettier": "2.2.1",
     "stylelint": "^13.12.0",
     "stylelint-config-standard": "^21.0.0",
-    "tailwindcss": "^2.0.4",
+    "tailwindcss": "^2.1.1",
     "typescript": "^4.1.2",
     "vite": "^2.1.3"
   }
