move to yarn workspaces from lerna

--- a/package.json
+++ b/package.json
@@ -5,6 +5,12 @@
   "workspaces": [
     "packages/*"
   ],
+  "nohoist": [
+    "*react*",
+    "*react*/**",
+    "*react-native*",
+    "*react-native*/**"
+  ],
   "scripts": {
     "test": "lerna run test",
     "build": "lerna run build",
