--- a/packages/intertext-ui/package.json
+++ b/packages/intertext-ui/package.json
@@ -1,4 +1,5 @@
 {
+  "private": true,
   "name": "@intertext/ui",
   "version": "0.0.0",
   "scripts": {
@@ -12,6 +13,7 @@
   },
   "dependencies": {
     "@intertext/engine": "^0.0.0",
+    "@intertext/utils": "^0.0.0",
     "chroma-js": "^2.1.1",
     "classnames": "^2.2.6",
     "focus-visible": "^5.2.0",
