--- a/packages/intertext-ui/tsconfig.json
+++ b/packages/intertext-ui/tsconfig.json
@@ -1,27 +1,27 @@
 {
   "compilerOptions": {
-    "sourceMap": true,
-    "target": "es6",
-    "jsx": "preserve",
+    "target": "es5",
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
     "types": ["vite/client"],
-    "moduleResolution": "node",
-    "experimentalDecorators": true,
-    "noEmitOnError": false,
-    "resolveJsonModule": true,
-    "importHelpers": true,
-    "strict": true,
-    "lib": ["ESNext", "DOM"],
-    "module": "commonjs",
-    "esModuleInterop": true,
-    "preserveSymlinks": true,
-    "typeRoots": ["./node_modules/@types"],
-    "downlevelIteration": true,
     "allowJs": true,
     "skipLibCheck": true,
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "strict": true,
     "forceConsistentCasingInFileNames": true,
-    "noEmit": true,
+    "noFallthroughCasesInSwitch": true,
+    "module": "esnext",
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
     "isolatedModules": true,
+    "noEmit": true,
+    "jsx": "react"
   },
-  "include": ["./src"],
-  "exclude": ["node_modules"]
+  "include": [
+    "src"
+  ]
 }
