--- a/packages/intertext-editor/package.json
+++ b/packages/intertext-editor/package.json
@@ -2,6 +2,7 @@
   "name": "@intertext/editor",
   "version": "0.0.0",
   "dependencies": {
+    "@chakra-ui/icons": "^1.0.10",
     "@chakra-ui/react": "^1.0.0",
     "@emotion/react": "^11.0.0",
     "@emotion/styled": "^11.0.0",
