--- a/packages/intertext-engine/tsconfig.json
+++ b/packages/intertext-engine/tsconfig.json
@@ -3,7 +3,7 @@
     "target": "es5",
     "module": "CommonJS",
     "outDir": "dist",
-    "lib": ["es2015", "dom"],
+    "lib": ["es2015", "es2019", "dom"],
     "declaration": true,
     "sourceMap": true,
     "resolveJsonModule": true,
