--- a/packages/intertext-cli/package.json
+++ b/packages/intertext-cli/package.json
@@ -19,11 +19,13 @@
 		"@intertext/engine": "^0.0.0",
 		"ink": "^3.0.8",
 		"meow": "^9.0.0",
+		"node-fetch": "^2.6.1",
 		"react": "^17.0.1"
 	},
 	"devDependencies": {
 		"@ava/typescript": "^1.1.1",
 		"@sindresorhus/tsconfig": "^0.8.0",
+		"@types/node-fetch": "^2.5.10",
 		"@types/react": "^17.0.0",
 		"ava": "^3.15.0",
 		"chalk": "^4.1.0",
